// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatNotification component should render with custom props 1`] = `
<styled.div>
  <Flex
    theme={
      Object {
        "breakpoints": Array [
          "40em",
          "52em",
          "64em",
        ],
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
          48,
          64,
          96,
          128,
        ],
        "space": Array [
          0,
          4,
          8,
          16,
          32,
          64,
          128,
          256,
          512,
        ],
      }
    }
  >
    <Box
      p={1}
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
      width={1}
    >
      <styled.button>
        <div>
          Cerrar
        </div>
        <span>
          <MdClose
            size={15}
          />
        </span>
      </styled.button>
    </Box>
  </Flex>
  <Flex
    theme={
      Object {
        "breakpoints": Array [
          "40em",
          "52em",
          "64em",
        ],
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
          48,
          64,
          96,
          128,
        ],
        "space": Array [
          0,
          4,
          8,
          16,
          32,
          64,
          128,
          256,
          512,
        ],
      }
    }
  >
    <Box
      m={2}
      p={1}
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
    >
      <AvatarGroup
        avatars={Array []}
        className="LT-AvatarGroup-Container"
        groupType="circle"
        size="xsmall"
        type="circle"
        withStatus={false}
        xDistance={12}
        yDistance={12}
      />
    </Box>
    <Box
      pt={1}
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
      width={1}
    >
      <styled.div>
        <styled.div>
          <ChatCard
            body=""
            height={50}
            render={[Function]}
            showRenderProp={false}
            title=""
            width={50}
          />
        </styled.div>
      </styled.div>
    </Box>
  </Flex>
</styled.div>
`;

exports[`ChatNotification component should render with no props 1`] = `
<styled.div>
  <Flex
    theme={
      Object {
        "breakpoints": Array [
          "40em",
          "52em",
          "64em",
        ],
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
          48,
          64,
          96,
          128,
        ],
        "space": Array [
          0,
          4,
          8,
          16,
          32,
          64,
          128,
          256,
          512,
        ],
      }
    }
  >
    <Box
      p={1}
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
      width={1}
    >
      <styled.button>
        <div>
          Cerrar
        </div>
        <span>
          <MdClose
            size={15}
          />
        </span>
      </styled.button>
    </Box>
  </Flex>
  <Flex
    theme={
      Object {
        "breakpoints": Array [
          "40em",
          "52em",
          "64em",
        ],
        "fontSizes": Array [
          12,
          14,
          16,
          20,
          24,
          32,
          48,
          64,
          96,
          128,
        ],
        "space": Array [
          0,
          4,
          8,
          16,
          32,
          64,
          128,
          256,
          512,
        ],
      }
    }
  >
    <Box
      m={2}
      p={1}
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
    >
      <AvatarGroup
        avatars={Array []}
        className="LT-AvatarGroup-Container"
        groupType="circle"
        size="xsmall"
        type="circle"
        withStatus={false}
        xDistance={12}
        yDistance={12}
      />
    </Box>
    <Box
      pt={1}
      theme={
        Object {
          "breakpoints": Array [
            "40em",
            "52em",
            "64em",
          ],
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
            96,
            128,
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
            512,
          ],
        }
      }
      width={1}
    >
      <styled.div>
        <styled.div>
          <ChatCard
            body=""
            height={150}
            render={[Function]}
            showRenderProp={false}
            title=""
            width={250}
          />
        </styled.div>
      </styled.div>
    </Box>
  </Flex>
</styled.div>
`;
